Add for loops page and update sagemath resources layout

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section id="resources">
             <h2>Resources</h2>
             <ul>
-                <li><a href="sagemath.html">SageMath</a> - Computational tools for number theory</li>
+                <li><a href="sagemath.html" style="font-size: 1.5em; font-weight: bold;">SageMath</a></li>
             </ul>
         </section>
     </main>
