Organize lecture notes: create lecture-notes folder, add table of contents, update README with workflow documentation

--- a/lecture-notes.html
+++ b/lecture-notes.html
@@ -16,6 +16,11 @@
         <section id="notes">
             <h2>Lecture Notes</h2>
             <p>Lecture notes will be posted here throughout the semester.</p>
+            
+            <h3>Table of Contents</h3>
+            <ul>
+                <li><a href="lecture-notes/divisibility-and-gcd.html">Divisibility and GCD</a></li>
+            </ul>
         </section>
         
         <section id="back-link">
