--- a/lecture-notes/divisibility-and-gcd.html
+++ b/lecture-notes/divisibility-and-gcd.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divisibility and Greatest Common Divisors</title>
-    
+    <style> body { margin: 30px;} </style>
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="style.css">
     
