Update syllabus with AI policy and midterms section; update sagemath.html with Number Theory Tutorial link

--- a/lecture-notes.html
+++ b/lecture-notes.html
@@ -20,6 +20,7 @@
             <h3>Table of Contents</h3>
             <ul>
                 <li><a href="lecture-notes/divisibility-and-gcd.html">Divisibility and GCD</a></li>
+                <li><a href="lecture-notes/euclidean-algorithm.html">Euclidean Algorithm</a></li>
             </ul>
         </section>
         
