--- a/sagemath.html
+++ b/sagemath.html
@@ -53,7 +53,7 @@
             <h2>Documentation</h2>
             <ul>
                 <li><a href="https://doc.sagemath.org/html/en/tutorial/" target="_blank">SageMath Tutorial</a></li>
-                <li><a href="https://doc.sagemath.org/html/en/reference/number_theory/" target="_blank">Number Theory Reference</a></li>
+                <li><a href="https://doc.sagemath.org/html/en/tutorial/tour_numtheory.html" target="_blank">Number Theory Tutorial</a></li>
             </ul>
         </section>
         
