--- a/schedule.html
+++ b/schedule.html
@@ -73,57 +73,57 @@
                 <tbody>
                     <tr>
                         <td>Week 1</td>
-                        <td>Jan 21, 23</td>
+                        <td>Jan 20, 22</td>
                         <td>
                             Introduction to number theory: Pythagorean triples, prime numbers, Diophantine equations. Cryptography and computation in Sage.
                         </td>
                         <td>Chapter 2 (optional) <em>[Silverman]</em></td>
-                        <td></td>
+                        <td>Problem Set 1 (Due Jan 30)</td>
                     </tr>
                     <tr>
                         <td>Week 2</td>
-                        <td>Jan 28, 30</td>
+                        <td>Jan 27, 29</td>
                         <td>
                             Greatest common divisors, the Euclidean algorithm and linear Diophantine equations.
                         </td>
                         <td>Chapters 5, 6 <em>[Silverman]</em></td>
-                        <td>Problem Set 1</td>
+                        <td>Problem Set 2 (Due Feb 6)</td>
                     </tr>
                     <tr>
                         <td>Week 3</td>
-                        <td>Feb 4, 6</td>
+                        <td>Feb 3, 5</td>
                         <td>
                             Introduction to proofs: direct proof, contradiction and induction.
                         </td>
                         <td>TBD</td>
-                        <td>Problem Set 2</td>
+                        <td>Problem Set 3 (Due Feb 13)</td>
                     </tr>
                     <tr>
                         <td>Week 4</td>
-                        <td>Feb 11, 13</td>
+                        <td>Feb 10, 12</td>
                         <td>
                             Primes and the fundamental theorem of arithmetic.
                         </td>
                         <td>Chapter 12 up to Theorem 12.1, Chapter 7 <em>[Silverman]</em></td>
-                        <td>Problem Set 3</td>
+                        <td>Problem Set 4 (Due Feb 20)</td>
                     </tr>
                     <tr>
                         <td>Week 5</td>
-                        <td>Feb 18, 20</td>
+                        <td>Feb 17, 19</td>
                         <td>
                             Revisiting Pythagorean triples, introduction to congruences and solving congruence equations. <strong>Midterm 1</strong>
                         </td>
                         <td>Chapter 8 <em>[Silverman]</em></td>
-                        <td></td>
+                        <td>Problem Set 5 (Due Feb 27)</td>
                     </tr>
                     <tr>
                         <td>Week 6</td>
-                        <td>Feb 25, 27</td>
+                        <td>Feb 24, 26</td>
                         <td>
                             More on congruences: powers, Fermat's little theorem, Euler's theorem, the phi function and the Chinese remainder theorem.
                         </td>
                         <td>Chapters 9, 10, 11 <em>[Silverman]</em></td>
-                        <td>Problem Set 4</td>
+                        <td>Problem Set 6 (Due Mar 6)</td>
                     </tr>
                     <tr>
                         <td>Week 7</td>
@@ -132,7 +132,7 @@
                             <strong>(Remote lectures)</strong> Application of number theory to cryptography: RSA algorithm.
                         </td>
                         <td>Chapters 17, 18 <em>[Silverman]</em></td>
-                        <td>Problem Set 5</td>
+                        <td>Problem Set 7 (Due Mar 13)</td>
                     </tr>
                     <tr>
                         <td>Week 8</td>
@@ -141,7 +141,7 @@
                             Implementation of RSA. More on cryptography and primality testing.
                         </td>
                         <td>Chapter 19 <em>[Silverman]</em></td>
-                        <td>Problem Set 6</td>
+                        <td>Problem Set 8 (Due Mar 20)</td>
                     </tr>
                     <tr class="spring-break">
                         <td colspan="5">Spring Break (Mar 16 – 20)</td>
@@ -153,7 +153,7 @@
                             Squares modulo p.
                         </td>
                         <td>TBD</td>
-                        <td>Problem Set 7</td>
+                        <td>Problem Set 9 (Due Mar 27)</td>
                     </tr>
                     <tr>
                         <td>Week 10</td>
@@ -162,7 +162,7 @@
                             Quadratic reciprocity. <strong>Midterm 2</strong>
                         </td>
                         <td>TBD</td>
-                        <td></td>
+                        <td>Problem Set 10 (Due Apr 10)</td>
                     </tr>
                     <tr>
                         <td>Week 11</td>
@@ -171,7 +171,7 @@
                             Primitive roots.
                         </td>
                         <td>Chapters 28, 29 <em>[Silverman]</em></td>
-                        <td>Problem Set 8</td>
+                        <td>Problem Set 11 (Due Apr 17)</td>
                     </tr>
                     <tr>
                         <td>Week 12</td>
@@ -180,7 +180,7 @@
                             Application to cryptography: Diffie-Hellman.
                         </td>
                         <td>TBD</td>
-                        <td>Problem Set 9</td>
+                        <td>Problem Set 12 (Due Apr 24)</td>
                     </tr>
                     <tr>
                         <td>Week 13</td>
@@ -189,7 +189,7 @@
                             Other topics (possibly Pell's equations, continued fractions, irrational numbers).
                         </td>
                         <td>TBD</td>
-                        <td>Problem Set 10</td>
+                        <td>Problem Set 13 (Due May 1)</td>
                     </tr>
                 </tbody>
             </table>
