Update convert_to_html.py: add indented-list class, h1 styling, underscore italics, and back link; regenerate all HTML files; move lecture-notes.html to lecture-notes folder

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section id="materials">
             <h2>Course Materials</h2>
             <ul>
-                <li><a href="lecture-notes.html" style="font-size: 1.2em;">Lecture Notes</a></li>
+                <li><a href="lecture-notes/lecture-notes.html" style="font-size: 1.2em;">Lecture Notes</a></li>
                 <li><a href="problem-sets.html" style="font-size: 1.2em;">Problem Sets</a></li>
             </ul>
         </section>
