--- a/lecture-notes/euclidean-algorithm.html
+++ b/lecture-notes/euclidean-algorithm.html
@@ -153,5 +153,11 @@ factor(m)
 </script>
 </div>
 
+
+<hr style="margin-top: 40px; margin-bottom: 20px;">
+<p style="text-align: center;">
+    <a href="lecture-notes.html" style="font-size: 1.1em;">← Back to Lecture Notes</a>
+</p>
+
 </body>
 </html>
