--- a/lecture-notes/lecture-note-workflow.html
+++ b/lecture-notes/lecture-note-workflow.html
@@ -178,5 +178,11 @@ python convert_to_html.py divisibility-and-gcd.ipynb output/my-lecture.html
 
 </div>
 
+
+<hr style="margin-top: 40px; margin-bottom: 20px;">
+<p style="text-align: center;">
+    <a href="lecture-notes.html" style="font-size: 1.1em;">← Back to Lecture Notes</a>
+</p>
+
 </body>
 </html>
