--- a/syllabus.html
+++ b/syllabus.html
@@ -126,7 +126,7 @@
         
         <section id="academic-integrity">
             <h2>Academic Integrity</h2>
-            <p>Students are expected to adhere to the Johns Hopkins University Academic Integrity policies. All work submitted must be your own. While collaboration on problem sets is encouraged, you must write up your solutions independently. Any violations of academic integrity will be taken seriously and reported to the appropriate university authorities.</p>
+            <p>Students are expected to adhere to the Johns Hopkins University Academic Integrity policies (please see the syllabus on Canvas for a detailed statement). All work submitted must be your own. While collaboration on problem sets is encouraged, you must write up your solutions independently. Any violations of academic integrity will be taken seriously and reported to the appropriate university authorities.</p>
 
             <h3>AI Policy</h3>
             <p>The use of AI tools, such as ChatGPT or similar, is permitted for brainstorming and general guidance. However, all submitted work must be your own. Direct copying of AI-generated content is not allowed and will be considered a violation of academic integrity.</p>
