--- a/lecture-notes/divisibility-and-gcd.html
+++ b/lecture-notes/divisibility-and-gcd.html
@@ -358,5 +358,11 @@ print(f"gcd({a}, {b}) = {gcd(a, b)}")
 </script>
 </div>
 
+
+<hr style="margin-top: 40px; margin-bottom: 20px;">
+<p style="text-align: center;">
+    <a href="lecture-notes.html" style="font-size: 1.1em;">← Back to Lecture Notes</a>
+</p>
+
 </body>
 </html>
