--- a/lecture-notes/lecture-notes.html
+++ b/lecture-notes/lecture-notes.html
@@ -25,7 +25,7 @@
         </section>
         
         <section id="back-link">
-            <p><a href="index.html">← Back to Course Home</a></p>
+            <p><a href="../../index.html">← Back to Course Home</a></p>
         </section>
     </main>
     
