Added problem set 1

--- a/problem-sets/problem-sets.html
+++ b/problem-sets/problem-sets.html
@@ -17,12 +17,12 @@
             <h2>Problem Sets</h2>
             <p>Problem sets will be posted here throughout the semester.</p>
             <ul>
-                <li><a href="problem-sets/[304]problem-set-1.pdf">Problem Set 1</a> (Due January 30, 2026)</li>
+                <li><a href="[304]problem-set-1.pdf">Problem Set 1</a> (Due January 30, 2026)</li>
             </ul>
         </section>
         
         <section id="back-link">
-            <p><a href="index.html">← Back to Course Home</a></p>
+            <p><a href="../index.html">← Back to Course Home</a></p>
         </section>
     </main>
     
