Add Relevant Notes column to schedule, update lecture notes content, and fix navigation links

--- a/schedule.html
+++ b/schedule.html
@@ -67,6 +67,7 @@
                         <th>Dates</th>
                         <th>Topics</th>
                         <th>Reading</th>
+                        <th>Relevant Notes</th>
                         <th>Problem Sets (Due Friday 5pm)</th>
                     </tr>
                 </thead>
@@ -78,6 +79,10 @@
                             Introduction to number theory: Pythagorean triples, prime numbers, Diophantine equations. Cryptography and computation in Sage.
                         </td>
                         <td>Chapter 2 (optional) <em>[Silverman]</em></td>
+                        <td>
+                            <a href="lecture-notes/divisibility-and-gcd.html">Divisibility and GCD</a><br>
+                            <a href="lecture-notes/euclidean-algorithm.html">Euclidean Algorithm</a>
+                        </td>
                         <td>—</td>
                     </tr>
                     <tr>
@@ -87,6 +92,7 @@
                             Greatest common divisors, the Euclidean algorithm and linear Diophantine equations.
                         </td>
                         <td>Chapters 5, 6 <em>[Silverman]</em></td>
+                        <td></td>
                         <td>Problem Set 1 (Due Jan 30)</td>
                     </tr>
                     <tr>
@@ -96,7 +102,8 @@
                             Introduction to proofs: direct proof, contradiction and induction.
                         </td>
                         <td>TBD</td>
-                        <td>Problem Set 2 (Due Feb 13)</td>
+                        <td></td>
+                        <td>Problem Set 2 (Due Feb 6)</td>
                     </tr>
                     <tr>
                         <td>Week 4</td>
@@ -105,7 +112,8 @@
                             Primes and the fundamental theorem of arithmetic.
                         </td>
                         <td>Chapter 12 up to Theorem 12.1, Chapter 7 <em>[Silverman]</em></td>
-                        <td>Problem Set 3 (Due Feb 20)</td>
+                        <td></td>
+                        <td>Problem Set 3 (Due Feb 13)</td>
                     </tr>
                     <tr>
                         <td>Week 5</td>
@@ -114,6 +122,7 @@
                             Revisiting Pythagorean triples, introduction to congruences and solving congruence equations. <strong>Midterm 1</strong>
                         </td>
                         <td>Chapter 8 <em>[Silverman]</em></td>
+                        <td></td>
                         <td>—</td>
                     </tr>
                     <tr>
@@ -123,6 +132,7 @@
                             More on congruences: powers, Fermat's little theorem, Euler's theorem, the phi function and the Chinese remainder theorem.
                         </td>
                         <td>Chapters 9, 10, 11 <em>[Silverman]</em></td>
+                        <td></td>
                         <td>Problem Set 4 (Due Feb 27)</td>
                     </tr>
                     <tr>
@@ -132,6 +142,7 @@
                             <strong>(Remote lectures)</strong> Application of number theory to cryptography: RSA algorithm.
                         </td>
                         <td>Chapters 17, 18 <em>[Silverman]</em></td>
+                        <td></td>
                         <td>Problem Set 5 (Due Mar 6)</td>
                     </tr>
                     <tr>
@@ -141,10 +152,11 @@
                             Implementation of RSA. More on cryptography and primality testing.
                         </td>
                         <td>Chapter 19 <em>[Silverman]</em></td>
+                        <td></td>
                         <td>Problem Set 6 (Due Mar 13)</td>
                     </tr>
                     <tr class="spring-break">
-                        <td colspan="5">Spring Break (Mar 16 – 20)</td>
+                        <td colspan="6">Spring Break (Mar 16 – 20)</td>
                     </tr>
                     <tr>
                         <td>Week 9</td>
@@ -153,6 +165,7 @@
                             Squares modulo p.
                         </td>
                         <td>TBD</td>
+                        <td></td>
                         <td>Problem Set 7 (Due Mar 27)</td>
                     </tr>
                     <tr>
@@ -162,6 +175,7 @@
                             Quadratic reciprocity. <strong>Midterm 2</strong>
                         </td>
                         <td>TBD</td>
+                        <td></td>
                         <td>—</td>
                     </tr>
                     <tr>
@@ -171,6 +185,7 @@
                             Primitive roots.
                         </td>
                         <td>Chapters 28, 29 <em>[Silverman]</em></td>
+                        <td></td>
                         <td>Problem Set 8 (Due Apr 10)</td>
                     </tr>
                     <tr>
@@ -180,6 +195,7 @@
                             Application to cryptography: Diffie-Hellman.
                         </td>
                         <td>TBD</td>
+                        <td></td>
                         <td>Problem Set 9 (Due Apr 17)</td>
                     </tr>
                     <tr>
@@ -189,6 +205,7 @@
                             Other topics (possibly Pell's equations, continued fractions, irrational numbers).
                         </td>
                         <td>TBD</td>
+                        <td></td>
                         <td>Problem Set 10 (Due Apr 24)</td>
                     </tr>
                 </tbody>
