--- a/lecture-notes/divisibility-and-gcd.html
+++ b/lecture-notes/divisibility-and-gcd.html
@@ -11,8 +11,30 @@
     <!-- SageCell JavaScript -->
     <script src="https://sagecell.sagemath.org/static/embedded_sagecell.js"></script>
     <script>
+        // Create separate linked groups for each section
         sagecell.makeSagecell({
-            inputLocation: '.sage-cell',
+            inputLocation: '.sage-section-0',
+            evalButtonText: 'Run',
+            languages: ['sage'],
+            hide: ['permalink'],
+            linked: true
+        });
+        sagecell.makeSagecell({
+            inputLocation: '.sage-section-1',
+            evalButtonText: 'Run',
+            languages: ['sage'],
+            hide: ['permalink'],
+            linked: true
+        });
+        sagecell.makeSagecell({
+            inputLocation: '.sage-section-2',
+            evalButtonText: 'Run',
+            languages: ['sage'],
+            hide: ['permalink'],
+            linked: true
+        });
+        sagecell.makeSagecell({
+            inputLocation: '.sage-section-3',
             evalButtonText: 'Run',
             languages: ['sage'],
             hide: ['permalink'],
@@ -24,23 +46,23 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script>
-        MathJax = {
-            tex: {
+        MathJax = {{
+            tex: {{
                 inlineMath: [['$', '$'], ['\\(', '\\)']],
                 displayMath: [['$$', '$$'], ['\\[', '\\]']]
-            }
-        };
+            }}
+        }};
     </script>
     
     <style>
-        .markdown-cell {
+        .markdown-cell {{
             margin: 20px 0;
-        }
-        .sage-cell {
+        }}
+        .sage-cell {{
             margin: 20px 0;
-        }
+        }}
         /* Header styling - make h1 stand out with boxes */
-        .markdown-cell h1 {
+        .markdown-cell h1 {{
             background-color: #f0f4f8;
             border: 2px solid #003366;
             border-left: 5px solid #003366;
@@ -49,11 +71,11 @@
             margin-bottom: 20px;
             border-radius: 5px;
             color: #003366;
-        }
+        }}
         /* First h1 shouldn't have extra top margin */
-        .markdown-cell:first-child h1:first-child {
+        .markdown-cell:first-child h1:first-child {{
             margin-top: 20px;
-        }
+        }}
     </style>
 </head>
 <body>
@@ -88,7 +110,7 @@ $$m = nk$$
 <p>We can check divisibility in SageMath using the modulo operator <code>%</code> or the <code>divides()</code> method:</p>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-1">
 <script type="text/x-sage">
 # Method: Using the divides() method in SageMath
 
@@ -98,7 +120,7 @@ print("Does 7 divide 30?", 7.divides(30))
 </script>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-1">
 <script type="text/x-sage">
 # Finding all positive divisors of a number
 n = 60
@@ -123,7 +145,7 @@ If $a, b$ are integers with $b \neq 0$, there are <em>unique</em> integers $q, r
 </ol>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-1">
 <script type="text/x-sage">
 # Examples of division in SageMath
 
@@ -164,7 +186,7 @@ print(f"25 divided by 7: quotient = {q3}, remainder = {r3}")
 </ol>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-1">
 <script type="text/x-sage">
 # Example: Linear combination property
 # If 6 divides 18 and 6 divides 24, then 6 divides any linear combination
@@ -226,7 +248,7 @@ $$\gcd(a_1, a_2, \ldots, a_n)$$
 <h3>Computing GCD with SageMath</h3>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-2">
 <script type="text/x-sage">
 # Using the gcd() function
 
@@ -238,7 +260,7 @@ print("gcd(-12, 18) =", gcd(-12, 18))
 </script>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-2">
 <script type="text/x-sage">
 # GCD of multiple numbers
 
@@ -247,7 +269,7 @@ print("gcd(30, 45, 60, 75) =", gcd([30, 45, 60, 75]))
 </script>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-2">
 <script type="text/x-sage">
 # Finding all common divisors of two numbers
 
@@ -282,7 +304,7 @@ print(f"\nVerification using gcd(): gcd({a}, {b}) = {gcd(a, b)}")
 </ol>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-2">
 <script type="text/x-sage">
 # Verifying property 6: gcd(ca, cb) = |c| * gcd(a, b)
 
@@ -308,7 +330,7 @@ print(f"\nProperty verified: {gcd(c*a, c*b)} = {abs(c) * gcd(a, b)}")
 </ul></p>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-2">
 <script type="text/x-sage">
 # Finding pairs of relatively prime numbers
 
@@ -327,7 +349,7 @@ for a in range(1, n+1):
 <p>Use SageMath to solve the following problems:</p>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-3">
 <script type="text/x-sage">
 # Problem 1: Find gcd(123456, 789012)
 
@@ -336,7 +358,7 @@ print(f"gcd(123456, 789012) = {result}")
 </script>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-3">
 <script type="text/x-sage">
 # Problem 2: Find all integers n with 1 ≤ n ≤ 30 such that gcd(n, 30) = 1
 
@@ -346,7 +368,7 @@ print(f"Count: {len(coprime_to_30)}")
 </script>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-3">
 <script type="text/x-sage">
 # Problem 3: Find gcd(2^10 - 1, 2^15 - 1)
 
