--- a/lecture-notes/euclidean-algorithm.html
+++ b/lecture-notes/euclidean-algorithm.html
@@ -11,8 +11,44 @@
     <!-- SageCell JavaScript -->
     <script src="https://sagecell.sagemath.org/static/embedded_sagecell.js"></script>
     <script>
+        // Create separate linked groups for each section
         sagecell.makeSagecell({
-            inputLocation: '.sage-cell',
+            inputLocation: '.sage-section-0',
+            evalButtonText: 'Run',
+            languages: ['sage'],
+            hide: ['permalink'],
+            linked: true
+        });
+        sagecell.makeSagecell({
+            inputLocation: '.sage-section-1',
+            evalButtonText: 'Run',
+            languages: ['sage'],
+            hide: ['permalink'],
+            linked: true
+        });
+        sagecell.makeSagecell({
+            inputLocation: '.sage-section-2',
+            evalButtonText: 'Run',
+            languages: ['sage'],
+            hide: ['permalink'],
+            linked: true
+        });
+        sagecell.makeSagecell({
+            inputLocation: '.sage-section-3',
+            evalButtonText: 'Run',
+            languages: ['sage'],
+            hide: ['permalink'],
+            linked: true
+        });
+        sagecell.makeSagecell({
+            inputLocation: '.sage-section-4',
+            evalButtonText: 'Run',
+            languages: ['sage'],
+            hide: ['permalink'],
+            linked: true
+        });
+        sagecell.makeSagecell({
+            inputLocation: '.sage-section-5',
             evalButtonText: 'Run',
             languages: ['sage'],
             hide: ['permalink'],
@@ -24,23 +60,23 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script>
-        MathJax = {
-            tex: {
+        MathJax = {{
+            tex: {{
                 inlineMath: [['$', '$'], ['\\(', '\\)']],
                 displayMath: [['$$', '$$'], ['\\[', '\\]']]
-            }
-        };
+            }}
+        }};
     </script>
     
     <style>
-        .markdown-cell {
+        .markdown-cell {{
             margin: 20px 0;
-        }
-        .sage-cell {
+        }}
+        .sage-cell {{
             margin: 20px 0;
-        }
+        }}
         /* Header styling - make h1 stand out with boxes */
-        .markdown-cell h1 {
+        .markdown-cell h1 {{
             background-color: #f0f4f8;
             border: 2px solid #003366;
             border-left: 5px solid #003366;
@@ -49,11 +85,11 @@
             margin-bottom: 20px;
             border-radius: 5px;
             color: #003366;
-        }
+        }}
         /* First h1 shouldn't have extra top margin */
-        .markdown-cell:first-child h1:first-child {
+        .markdown-cell:first-child h1:first-child {{
             margin-top: 20px;
-        }
+        }}
     </style>
 </head>
 <body>
@@ -69,7 +105,7 @@
 To find the greatest common divisor (GCD) of two numbers, one naive method is to list all divisors of each number and find the largest common divisor. For example:
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-1">
 <script type="text/x-sage">
 # Listing all divisors of two numbers
 def divisors(n):
@@ -89,7 +125,7 @@ print(f"GCD of {a} and {b} is {gcd}")
 Another naive method is to find the prime factorizations of the two numbers. For example:
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-1">
 <script type="text/x-sage">
 a = 48
 b = 36
@@ -118,7 +154,7 @@ $$8 = 4 \cdot 2 + 0$$
 <p>The last non-zero remainder is $4$, so $\gcd(48, 20) = 4$.</p>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-2">
 <script type="text/x-sage">
 def euclidean_gcd(a, b):
 # Try to write some code that computes the gcd! You will need to know some stuff about functions
@@ -134,7 +170,7 @@ def euclidean_gcd(a, b):
 When we have large integers, it can take quite a while to factor them.
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-3">
 <script type="text/x-sage">
 n = 306859557335763324403448444069903908987961835806843044243 
 factor(n)  # This will take a while!
@@ -145,7 +181,7 @@ factor(n)  # This will take a while!
 <p>However, we can still find the gcd efficiently!</p>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-3">
 <script type="text/x-sage">
 n = 306859557335763324403448444069903908987961835806843044243 
 m = 3137761082682763502441065262992475630332367765985493228
@@ -178,7 +214,7 @@ $$1 = 13 \cdot 4 + 17 \cdot (-3)$$
 <p>We can verify: $13(4) + 17(-3) = 52 - 51 = 1$ ✓</p>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-4">
 <script type="text/x-sage">
 # Sage has a built-in function to find the extended GCD
 # xgcd returns (g, x, y) where g = gcd(a,b) and g = a*x + b*y
@@ -208,7 +244,7 @@ $$y = y_0 - \frac{a}{\gcd(a,b)} \cdot t$$
 <p><em>Hint: If $(x_1, y_1)$ is another solution, consider $a(x_1 - x_0) + b(y_1 - y_0)$ and what this equals.</em></p>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-4">
 <script type="text/x-sage">
 # Finding multiple solutions to 13x + 17y = 1
 a = 13
@@ -233,7 +269,7 @@ for t in range(-2, 3):
 </ol>
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-5">
 <script type="text/x-sage">
 # Solve 84x + 33y = 12
 a = 84
@@ -264,7 +300,7 @@ else:
 Verify your answer in Sage.
 </div>
 
-<div class="sage-cell">
+<div class="sage-cell sage-section-5">
 <script type="text/x-sage">
 # Use this SageCell to verify your answer:
 from random import randint
