Updated office hours

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <ul>
                 <li><em>Name:</em> Christian Klevdal </li>
                 <li><em>Email:</em> cklevdal [at] jh.edu </li>
-                <li><em>Office:</em> Krieger 212 </li>
-                <li><em>Office Hours:</em> TBD </li>
+                <li><em>Office:</em> Krieger 213 </li>
+                <li><em>Office Hours:</em> Thursday 11am-12pm, or by appointment</li>
             </ul>
             
             <h3>Teaching Assistant</h3>
@@ -30,7 +30,7 @@
                 <li><em>Name:</em> Daniel Pezzi </li>
                 <li><em>Email:</em> dpezzi1 [at] jhu.edu </li>
                 <li><em>Office:</em> Krieger 202 </li>
-                <li><em>Office Hours:</em> TBD </li>
+                <li><em>Office Hours:</em> Monday 10am-11am </li>
             </ul>
             
             <h3>Class Times and Locations</h3>
