Update course materials: Add Problem Set 2, add miscellaneous worksheets to lecture notes, and enhance schedule page with hyperlinks and references

--- a/lecture-notes/lecture-notes.html
+++ b/lecture-notes/lecture-notes.html
@@ -22,6 +22,12 @@
                 <li><a href="divisibility-and-gcd.html">Divisibility and GCD</a></li>
                 <li><a href="euclidean-algorithm.html">Euclidean Algorithm</a></li>
             </ul>
+            
+            <h3>Miscellaneous</h3>
+            <ul>
+                <li><a href="../misc/[304]exploratory-worksheet.pdf">Exploratory Worksheet</a></li>
+                <li><a href="../misc/intro-proofs-logic-worksheet.pdf">Intro to Proofs and Logic Worksheet</a></li>
+            </ul>
         </section>
         
         <section id="back-link">
