--- a/problem-sets.html
+++ b/problem-sets.html
@@ -17,7 +17,8 @@
             <h2>Problem Sets</h2>
             <p>Problem sets will be posted here throughout the semester.</p>
             <ul>
-                <li><a href="problem-sets/[304]problem-set-1.pdf">Problem Set 1</a> (Due January 30, 2026)</li>
+                <li><a href="problem-sets/[304]problem-set-1.pdf">Problem Set 1</a> (Due January 30, 2026, at 5pm)</li>
+                <li><a href="problem-sets/[304]problem-set-2.pdf">Problem Set 2</a> (Due February 6, 2026, at 5pm)</li>
             </ul>
         </section>
         
