--- a/problem-sets.html
+++ b/problem-sets.html
@@ -19,6 +19,7 @@
             <ul>
                 <li><a href="problem-sets/[304]problem-set-1.pdf">Problem Set 1</a> (Due January 30, 2026, at 5pm)</li>
                 <li><a href="problem-sets/[304]problem-set-2.pdf">Problem Set 2</a> (Due February 6, 2026, at 5pm)</li>
+                <li><a href="problem-sets/[304]problem-set-3.pdf">Problem Set 3</a> (Due February 13, 2026, at 5pm)</li>
             </ul>
         </section>
         
