Changes to style.css, bigger maximum width in tables

--- a/schedule.html
+++ b/schedule.html
@@ -6,6 +6,10 @@
     <title>Class Schedule - 304-SP26</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        main {
+            max-width: 1400px;
+        }
+        
         table {
             width: 100%;
             border-collapse: collapse;
@@ -80,7 +84,7 @@
                         <th>Topics</th>
                         <th>Reading</th>
                         <th>Relevant Notes</th>
-                        <th>Problem Sets (Due Friday 5pm)</th>
+                        <th>Problem Sets</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -114,8 +118,7 @@
                             Introduction to proofs: direct proof, contradiction and induction.
                         </td>
                         <td>
-                            TBD<br><br>
-                            <strong>Supplementary References:</strong><br>
+                            <em>Supplementary References:</em><br>
                             • <a href="https://richardhammack.github.io/BookOfProof/" target="_blank">Book of Proof</a> (In depth reference for proofs and logic)<br>
                             • <a href="https://discrete.openmathbooks.org/dmoi3/ch_logic.html" target="_blank">Discrete Math: Logic Chapter</a> (quick reference)
                         </td>
