Add modular arithmetic introduction lecture notes and update schedule

--- a/schedule.html
+++ b/schedule.html
@@ -139,10 +139,10 @@
                         <td>Week 5</td>
                         <td>Feb 17, 19</td>
                         <td>
-                            Revisiting Pythagorean triples, introduction to congruences and solving congruence equations. <strong>Midterm 1</strong>
+                            Introduction to congruences and solving congruence equations. <strong>Midterm 1</strong>
                         </td>
-                        <td>Chapter 8 <em>[Silverman]</em></td>
-                        <td></td>
+                        <td>Chapter 8, 9 <em>[Silverman]</em></td>
+                        <td><a href="lecture-notes/modular-arithmetic-intro.html">Introduction to Modular Arithmetic</a></td>
                         <td>—</td>
                     </tr>
                     <tr>
