--- a/lecture-notes/lecture-notes.html
+++ b/lecture-notes/lecture-notes.html
@@ -21,6 +21,7 @@
             <ul>
                 <li><a href="divisibility-and-gcd.html">Divisibility and GCD</a></li>
                 <li><a href="euclidean-algorithm.html">Euclidean Algorithm</a></li>
+                <li><a href="modular-arithmetic-intro.html">Introduction to Modular Arithmetic</a></li>
             </ul>
             
             <h3>Miscellaneous</h3>
