Add links to order and Fermat's Little Theorem lecture notes

--- a/schedule.html
+++ b/schedule.html
@@ -142,7 +142,10 @@
                             Introduction to congruences and solving congruence equations. <strong>Midterm 1</strong>
                         </td>
                         <td>Chapter 8, 9 <em>[Silverman]</em></td>
-                        <td><a href="lecture-notes/modular-arithmetic-intro.html">Introduction to Modular Arithmetic</a></td>
+                        <td>
+                            <a href="lecture-notes/modular-arithmetic-intro.html">Introduction to Modular Arithmetic</a><br>
+                            <a href="lecture-notes/order-fermats-little-theorem.html">Units, Order and Fermat's Little Theorem</a>
+                        </td>
                         <td>—</td>
                     </tr>
                     <tr>
