--- a/lecture-notes/lecture-notes.html
+++ b/lecture-notes/lecture-notes.html
@@ -22,6 +22,7 @@
                 <li><a href="divisibility-and-gcd.html">Divisibility and GCD</a></li>
                 <li><a href="euclidean-algorithm.html">Euclidean Algorithm</a></li>
                 <li><a href="modular-arithmetic-intro.html">Introduction to Modular Arithmetic</a></li>
+                <li><a href="order-fermats-little-theorem.html">Units, Order and Fermat's Little Theorem</a></li>
             </ul>
             
             <h3>Miscellaneous</h3>
