Reorganized all pdf and tex files into a new folder pdf-and-tex-files so that tex files can be edited and compiled there directly. Created problem set 4. Udated links on webpage.

--- a/lecture-notes/lecture-notes.html
+++ b/lecture-notes/lecture-notes.html
@@ -27,8 +27,8 @@
             
             <h3>Miscellaneous</h3>
             <ul>
-                <li><a href="../misc/[304]exploratory-worksheet.pdf">Exploratory Worksheet</a></li>
-                <li><a href="../misc/intro-proofs-logic-worksheet.pdf">Intro to Proofs and Logic Worksheet</a></li>
+                <li><a href="../pdf-and-tex-files/exploratory-worksheet.pdf">Exploratory Worksheet</a></li>
+                <li><a href="../pdf-and-tex-files/intro-proofs-logic-worksheet.pdf">Intro to Proofs and Logic Worksheet</a></li>
             </ul>
         </section>
         
