--- a/schedule.html
+++ b/schedule.html
@@ -108,7 +108,7 @@
                             Greatest common divisors, the Euclidean algorithm and linear Diophantine equations.
                         </td>
                         <td>Chapters 5, 6 <em>[Silverman]</em></td>
-                        <td><a href="misc/[304]exploratory-worksheet.pdf">Exploratory Worksheet</a></td>
+                        <td><a href="pdf-and-tex-files/exploratory-worksheet.pdf">Exploratory Worksheet</a></td>
                         <td><a href="problem-sets.html">Problem Set 1</a> (Due Jan 30)</td>
                     </tr>
                     <tr>
@@ -122,7 +122,7 @@
                             • <a href="https://richardhammack.github.io/BookOfProof/" target="_blank">Book of Proof</a> (In depth reference for proofs and logic)<br>
                             • <a href="https://discrete.openmathbooks.org/dmoi3/ch_logic.html" target="_blank">Discrete Math: Logic Chapter</a> (quick reference)
                         </td>
-                        <td><a href="misc/intro-proofs-logic-worksheet.pdf">Intro to Proofs and Logic Worksheet</a></td>
+                        <td><a href="pdf-and-tex-files/intro-proofs-logic-worksheet.pdf">Intro to Proofs and Logic Worksheet</a></td>
                         <td><a href="problem-sets.html">Problem Set 2</a> (Due Feb 6)</td>
                     </tr>
                     <tr>
